src/themelib_sap_belize/src/sap/m/themes/sap_belize/IconTabBar.less
/* ... */
.sap-phone .sapMITBAll .sapMITBText {
	padding-right: 0.5rem;
}

.sap-phone .sapMITBFilter:last-child,
.sap-tablet .sapMITBFilter:last-child,
html[data-sap-ui-os=win8] .sapMITBFilter:last-child,
.sap-phone .sapMITBNoText .sapMITBFilter:last-child,
.sap-tablet .sapMITBNoText .sapMITBFilter:last-child,
html[data-sap-ui-os=win8] .sapMITBNoText .sapMITBFilter:last-child {
	padding-right: 1rem;
}

/* Tab Separator Item */
.sapMITBSep {
	width: 1.5rem;
}

.sapMITBSepLine {
	border: 1px solid @sapUiToolbarSeparatorColor;
	height: 3rem;
	margin: 0 0.25rem;
	width: 0;
}

.sap-phone .sapMITBSepLine {
	margin: 0 0.125rem;
}

.sapMITBSepIcon {
	color: @sapUiContentIconColor;
	font-size: 1rem;
	height: 3rem;
	line-height: 3rem;
	padding: 0 0.25rem;
}

.sapMITBHorizontal + .sapMITBSep {
	width: auto;
}

.sapMITBHorizontal + .sapMITBSep > .sapMITBSepIcon {
	padding: 0 0.5rem;
}

.sapMITBArrowScroll {
	color: @sapUiContentIconColor;
	cursor: pointer;
	font-size: 1rem;
	position: absolute;
	top: 1px;
}

.sap-desktop .sapMITBArrowScroll:hover,
.sap-desktop .sapMITBArrowScroll:active {
	color: @sapUiHighlight;
}

.sap-phone .sapMITBArrowScroll,
.sap-tablet .sapMITBArrowScroll,
html[data-sap-ui-os=win8] .sapMITBArrowScroll {
	top: 1rem;
}

.sapMITBArrowScrollLeft {
	left: 0.25rem;
	padding: 1rem 0.4rem;
}

.sapMITBArrowScrollRight {
	padding: 1rem 0.4rem;
	right: 0.25rem;
}

.sapMITBArrowScrollLeftTextOnly {
	left: 0.25rem;
	padding: 1rem 0.4rem;
}

.sapMITBArrowScrollRightTextOnly {
	padding: 1rem 0.4rem;
	right: 0.25rem;
}

.sap-phone .sapMITBArrowScrollLeft {
	left: 0.25rem;
	padding: 1rem 0;
}

.sap-phone .sapMITBArrowScrollRight {
	padding: 1rem 0;
	right: 0.25rem;
}

.sap-phone .sapMITBArrowScrollLeftTextOnly {
	left: 0.25rem;
	padding: 1.25rem 0 0.75rem;
}

.sap-phone .sapMITBArrowScrollRightTextOnly {
	padding: 1.25rem 0 0.75rem;
	right: 0.25rem;
}

.sapMITBNotScrollable > .sapMITBArrowScroll {
	visibility: hidden;
}

.sapMITBScrollable.sapMITBNoScrollBack > .sapMITBArrowScrollLeft,
.sapMITBScrollable.sapMITBNoScrollBack > .sapMITBArrowScrollLeftTextOnly,
.sapMITBScrollable.sapMITBNoScrollForward > .sapMITBArrowScrollRight,
.sapMITBScrollable.sapMITBNoScrollForward > .sapMITBArrowScrollRightTextOnly {
	visibility: hidden;
}

.sapMITBArrowScroll:focus,
.sapMITBHead:focus,
.sapMITBFilterIcon:focus,
.sapMITBItem:focus {
	outline: none;
}

/* Custom focus outline */
.sap-desktop .sapMITBItem:focus .sapMITBFilterIcon,
.sap-desktop .sapMITBTextOnly .sapMITBItem:focus .sapMITBText,
.sap-desktop .sapMITBItem:focus.sapMITBAll {
	outline: 1px dotted @sapUiContentFocusColor;
}

/* overrides responsive settings */
@media (max-width:599px) {
	.sapMITB.sapUiNoContentPadding,
	.sapMITB.sapUiResponsiveContentPadding {
		.sapMITBHead {
			margin: 1rem 1rem 0 1rem;
		}

		.sapMITBScrollContainer {
			margin: 0 1rem;
		}

		.sapMITBArrowScrollLeft {
			left: 0.25rem;
			padding: 1rem 0;
		}

		.sapMITBArrowScrollRight {
			padding: 1rem 0;
			right: 0.25rem;
		}

		.sapMITBArrowScrollLeftTextOnly {
			left: 0.25rem;
			padding: 1.25rem 0 0.75rem;
		}

		.sapMITBArrowScrollRightTextOnly {
			padding: 1.25rem 0 0.75rem;
			right: 0.25rem;
		}
	}

	html[data-sap-ui-os=win8] .sapMITB.sapUiNoContentPadding,
	html[data-sap-ui-os=win8] .sapMITB.sapUiResponsiveContentPadding {
		.sapMITBHead {
			margin: 1rem 1rem 0 0;
		}
	}
}

